[package]
name = "walrus-simtest"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prometheus.workspace = true
sui-json-rpc-types = { workspace = true, features = ["test-utils"] }
sui-macros.workspace = true
sui-protocol-config.workspace = true
tokio.workspace = true
tracing.workspace = true
walrus-core.workspace = true
walrus-proc-macros.workspace = true
walrus-service = { workspace = true, features = ["test-utils"] }
walrus-sui.workspace = true
walrus-test-utils.workspace = true

[lints]
workspace = true

[target.'cfg(msim)'.dependencies]
sui-simulator.workspace = true
