[package]
name = "walrus-stress"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
humantime.workspace = true
indicatif.workspace = true
mysten-metrics.workspace = true
prometheus.workspace = true
rand.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walrus-core.workspace = true
walrus-sdk.workspace = true
walrus-service = { workspace = true, features = ["client"] }
walrus-sui.workspace = true
walrus-test-utils.workspace = true
walrus-utils = { workspace = true, features = ["backoff"] }

[lints]
workspace = true
