[package]
name = "walrus-sui"
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["test-utils"]
test-utils = ["dep:test-cluster", "dep:walrus-test-utils", "dep:tempfile"]

[dependencies]
anyhow.workspace = true
bcs.workspace = true
fastcrypto.workspace = true
move-core-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sui-config.workspace = true
sui-keys.workspace = true
sui-move-build.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
tempfile = { workspace = true, optional = true }
test-cluster = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream.workspace = true
tracing.workspace = true
walrus-core.workspace = true
walrus-test-utils = { workspace = true, optional = true }

[lints]
workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
