[package]
name = "walrus-test-utils"
publish = false
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
fastcrypto = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
walrus-core = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
