[package]
name = "walrus-test-utils"
publish = false
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
rand = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
