[package]
name = "walrus-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-utils = ["dep:tempfile"]

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sui-rpc-api.workspace = true
sui-types.workspace = true
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
typed-store.workspace = true

[dev-dependencies]
tempfile.workspace = true
